overflow fix for mobile
p overflow-wrap: anywhere;

--- a/sass/theme/_theme.scss
+++ b/sass/theme/_theme.scss
@@ -10,6 +10,10 @@ html {
   scroll-behavior: smooth;
 }
 
+p {
+  overflow-wrap: anywhere;
+}
+
 #myBtn {
   display: none;
   position: fixed;
